Loading dots on app mount instead of block mount, also moving around some files into sub-modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src", "tst/Portait.test.tsx", "tst/Block.test.tsx", "tst/Banner.test.tsx", "tst/App.test.tsx"
   ]
 }
