--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^5.7.2",
     "@types/jest": "^26.0.5",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
